add index.html, index.js

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <title>Creating and Inserting DOM Elements</title>
   </head>
+  <h1>newHeader</h1>
   <script type="application/javascript">
   </script>
   <body>
-    <main id="main"></main>
+    <main id="main">
+      <h1>Original Main Content</h1>
+    <p>This is some content inside the main element.</p>
+      </main>
+      <script src="index.js"></script>
+      </body>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
